fix gmscompat null checks
Signed-off-by: Dmitrii <bankersenator@gmail.com>